scp/css/scp.css
/* ... */
#ticket_notes table th em {
    font-weight:normal;
    font-size:10pt;
    color:#666;
}

#ticket_notes .date {
    font-weight:normal;
    font-size:10pt;
    color:#888;
    text-align:right;
}

#ticket_thread > .message th {
    background:#C3D9FF;
}

#ticket_thread > .response th {
    background:#FFE0B3;
}

#ticket_thread > .note th {
    background:#FFE;
}

#ticket_notes table td {
    padding:5px;
}

#ticket_notes td {
    background:#f9f9f9;
}

#ticket_thread .info, #ticket_notes .info {
    padding:5px;
    background:#F4FAFF;
    height:16px;
    line-height:16px;
}

#ticket_notes .info {
     background:#f9f9f9;
}

#response_options {
    margin-top:30px;
}

#response_options > form {
    padding:0 10px;
}

ul.tabs {
    padding:4px 0 0 20px;
    margin:0;
    margin-bottom: 5px;
    text-align:center;
    height:29px;
    border-bottom:1px solid #aaa;
    background:#eef3f8;
}

#response_options ul.tabs {
    padding-left:190px;
}


ul.tabs li {
    margin:0;
    padding:0;
    display:inline;
    list-style:none;
}

ul.tabs li a {
    width:130px;
    font-weight:bold;
    padding:5px;
    height:18px;
    line-height:20px;
    color:#444;
    display:block;
    float:left;
    outline:none;
    position:relative;
    top:0;
    background:#fbfbfb;
    border:1px solid #eee;
    border-bottom:none;
}

#response_options .reply_tab.tell {
    color:#a00 !important;
    background-image:url(../images/reminder.png);
    background-position:12px 50%;
    background-repeat:no-repeat;
}

ul.tabs li a.active {
    height:18px;
    color:#184E81;
    background-color:#f9f9f9;
    border:1px solid #aaa;
    border-top:2px solid #81a9d7;
    border-bottom:none;
}

#response_options > form {
    padding:10px 5px;
    background:#f9f9f9;
    border:1px solid #aaa;
    border-top:none;
}

#response_options > form > table {
    table-layout: fixed;
}

#response_options > table td {
    vertical-align:top;
}

#response_options textarea {
    width:760px !important;
}

#response_options input[type=text], #response_options textarea:not(.richtext) {
    border:1px solid #aaa;
    background:#fff;
}

.attachments .uploads div {
    display:inline-block;
    padding-right:20px;
}



.file {
    display:inline-block;
    padding-left:20px;
    margin-right:20px;
    background:url(../images/icons/file.gif) 0 50% no-repeat;
}

.expander {
    line-height:14px;
    display:inline-block;
    width:12px;
    height:12px;
    overflow:hidden;
    text-align:center;
    color:#aaa;
    position:relative;
}

/** Popup Tool Tips and Content **/

.tip_box {
    display:block;
    height:30px;
    position:absolute;
    z-index:101;
}

.tip_arrow {
    display:block;
    position:absolute;
    top:5px;
    left:-12px;
    width:12px;
    z-index:102;
}

.tip_box.right .tip_arrow {
    top: 5px;
    right: -12px;
    left: auto;
}

.flip-x {
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}

.tip_content {
    height:auto !important;
    height:20px;
    min-height:20px;
    padding:10px;
    border:1px solid #666;
    background:#fff;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
    border-radius:5px;
    -moz-box-shadow: 3px 3px 3px #666;
    -webkit-box-shadow: 3px 3px 3px #666;
    box-shadow: 3px 3px 3px #666;
    z-index:3;
    position:absolute;
    top:0;
    left:-1px;
    min-width:400px;
    line-height: 1.15rem;
}

.tip_content .links {
    margin-top: 0.7em;
    padding-top: 0.4em;
    border-top: 1px solid #ddd;
}

.tip_content .links a {
    color: #548dd4;
}

.tip_content hr {

    color: #ddd;
    background-color: #ddd;
    height: 1px;
    border: 0;
    padding: 0;
    margin: 0.2em 0;
    width: 100%;
}

.tip_close {
    position:absolute;
    top:0.3em;
    right:0.5em;
    text-decoration:none;
}

.tip_shadow {
    display:none;
    background:#000;
    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.60);
    -ms-filter: "progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.60)";
    zoom: 1;
    position:absolute;
    z-index:200;
    top:0;
    left:0;
    width:auto !important;
    width:310px;
}

.tip_menu {
    margin:10px 0 0 0;
    padding:5px 0;
    border-top:1px solid #aaa;
    height:16px;
    font-size:9pt;
}

.tip_menu li {
    display:inline;
    list-style:none;
    margin:0;
    padding:0;
}

.tip_menu li a {
    display:block;
    width:auto;
    float:left;
    padding:0 10px;
    border-right:1px solid #ddd;
    color:#666;
}

.tip_menu li a:hover {
    color:#E76C74;
}

.tip_content form {
    display:none;
    line-height:24px;
}

.tip_content select, .tip_content textarea {
    width:295px;
}

.tip_content textarea {
    padding:0;
    border:1px solid #aaa;
    background:#fff;
}

.tip_content form p {
    margin:0;
    width:auto !important;
    width:295px;
    text-align:right;
    line-height:24px;
}

.tip_content h1 {
    font-size: 13pt;
    margin-top: 0;
    margin-bottom: 0.5em;
    padding-bottom: 0.2em;
    border-bottom: 1px solid #ddd;
    padding-right: 1.5em;
}

i.help-tip {
    vertical-align: inherit;
    color: #aaa;
    opacity: 0.8;
}
i.help-tip:hover {
    color: orange !important;
    cursor: pointer;
    opacity: 1;
}

caption > i.help-tip {
    color: white;
    opacity: 0.2;
}
caption:hover > i.help-tip {
    color: orange;
    color: #ffc20f;
    opacity: 1;
}

h2 > i.help-tip {
    vertical-align: baseline;
    font-size: 11pt;
}
.form_table th h4 i.help-tip {
    color: white;
}

/* Knowledgebase */
/* Knowledgebase */
#kb {
  margin: 2px 0;
  padding: 5px;
  overflow: hidden;
}
/* ... */

